--- a/chat/static/index.html
+++ b/chat/static/index.html
@@ -77,6 +77,7 @@
         });
 
         socket.on('roomJoin', (data) => {
+          console.log('oui');
             roomNameTitle.innerHTML = '<strong> Room Name : ' + data.room + '</strong>';
             affichage.innerHTML += '<br><strong>' + data.text + '</strong>';
         });
