--- a/chat/static/index.html
+++ b/chat/static/index.html
@@ -5,37 +5,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+    <script src="js/socketio.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Chat</title>
-    <style media="screen">
-      .colorSender{
-        color: red;
-      }
-    </style>
 </head>
 
 <body id="body">
-    <h1>Secret Chat</h1>
-    <div class="">
-      <h2 id="roomNameTitle"></h2>
+    <div class="row">
+        <div class="col-md-2">
+            menu
+        </div>
+        <div class="col">
+            <h1>Secret Chat</h1>
+            <div class="">
+                <h2 id="roomNameTitle"></h2>
+            </div>
+            <div style="display: none" id="contentMessage">
+                <textarea style="width: 100%;" id="message" rows="4"></textarea>
+                <button id="btn-send-msg">Envoyer</button>
+                <div id="affichage"></div>
+            </div>
+            <div id="contentPseudo">
+                <label for="pseudo">Pseudo *</label>
+                <input type="text" id="pseudo" name="pseudo">
+            </div>
+            <div id="contentRoomName" style="margin:1em 0 1em 0;">
+                <label for="room">Room *</label>
+                <input type="text" id="room" name="room">
+            </div>
+            <div id="contentBtnValider">
+                <button id="btn-valider-connection">Valider</button>
+            </div>
+        </div>
     </div>
-    <div style="display: none" id="contentMessage">
-        <textarea style="width: 100%;" id="message" rows="4"></textarea>
-        <button id="btn-send-msg">Envoyer</button>
-        <div id="affichage"></div>
-    </div>
-    <div id="contentPseudo">
-        <label for="pseudo">Pseudo *</label>
-        <input type="text" id="pseudo" name="pseudo">
-    </div>
-    <div id="contentRoomName" style="margin:1em 0 1em 0;">
-        <label for="room">Room *</label>
-        <input type="text" id="room" name="room">
-    </div>
-    <div id="contentBtnValider">
-      <button id="btn-valider-connection">Valider</button>
-    </div>
-
 
     <script>
         var socket = io({
@@ -56,9 +59,9 @@
         var classSender = "";
 
         btnValiderConnection.addEventListener('click', (e) => {
-          if(pseudo.value != "" && room.value != ""){
-            connectToRoom();
-          }
+            if (pseudo.value != "" && room.value != "") {
+                connectToRoom();
+            }
         });
 
         room.addEventListener('keyup', (e) => {
@@ -96,8 +99,12 @@
             affichage.innerHTML += '<br><strong>' + data.text + '</strong>'; // affichage user join room
         });
 
+        socket.on('listUser', (data) => {
+            affichage.innerHTML += '<br><strong>' + data.text + '</strong>'; // affichage user join room
+        });
+
         function connectToRoom() {
-            socket.emit('connectToRoom', {pseudo:pseudo.value,room:room.value});
+            socket.emit('connectToRoom', { pseudo: pseudo.value, room: room.value });
             contentPseudo.style.display = 'none';
             contentRoomName.style.display = 'none';
             contentBtnValider.style.display = 'none';
