--- a/chat/static/index.html
+++ b/chat/static/index.html
@@ -115,15 +115,15 @@
 
         socket.on('roomJoin', (data) => {
             roomNameTitle.innerHTML = '<strong> Room Name : ' + data.room + '</strong>'; // affichage nom room
-            displayMessage(data);
+            displayInfoRoom(data);
         });
 
         socket.on('userJoin', (data) => {
-            displayMessage(data);
+            displayInfoRoom(data);
         });
 
         socket.on('userLeave', (data) => {
-            displayMessage(data);
+            displayInfoRoom(data);
         });
 
         socket.on('updateListUsers', (data) => {
@@ -143,7 +143,7 @@
           });
         });
 
-        function displayMessage(data){
+        function displayInfoRoom(data){
           affichage.innerHTML += '<br><strong>' + data.text + '</strong>'; // affichage user join room
         }
 
